--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,3 +116,29 @@ body {
   position: relative;
   z-index: 2;
 }
+
+
+
+
+.AboutUsBG  {
+  background-image: url('/assets/M1.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  filter: saturate(1.7);
+}
+
+.overlayWhite {
+  width: 100%; 
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 2;
+  cursor: pointer; 
+  position: absolute;
+  z-index: -1;
+}
