Enhance loading experience with new loader component, improve AboutUs and Sustainability sections layout and animations, and update Header links for better navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 
 @layer base {
   html, body {
-    @apply scroll-smooth snap-y ;
+    @apply scroll-smooth snap-y snap-start;
   }
 }
 
@@ -42,6 +42,11 @@ body {
   scroll-behavior: smooth;
 }
 
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
 
 .overlay {
   width: 100%; 
@@ -257,3 +262,27 @@ body {
   );
 }
 
+
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  display: inline-grid;
+  padding: 5px;
+  background: #fff;
+  filter: blur(4px) contrast(12);
+}
+.loader:before {
+  content: "";
+  height: 40px;
+  aspect-ratio: 3;
+  --c: #0000 64%,#000 66% 98%,#0000 101%;
+  background:
+    radial-gradient(35% 146% at 50% 159%,var(--c)) 0 0,
+    radial-gradient(35% 146% at 50% -59%,var(--c)) 100% 100%;
+  background-size: calc(200%/3) 50%;
+  background-repeat: repeat-x;
+  animation: l11 .8s infinite linear;
+}
+@keyframes l11{
+  to {background-position: -200% 0,-100% 100%}
+}
