style: Update Header component styles for improved responsiveness and adjust global CSS width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   height: 100%;
+  width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
