--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,46 @@ body {
   
 }
 
+.loadingContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(15px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  z-index: 12000;
+}
+
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 180px;
+  height: 22px;
+  box-shadow: 0 -3px 0 #000000;
+  background: linear-gradient(#000000 0 0) 50%/2px 100% no-repeat;
+  display: grid;
+}
+.loader:before,
+.loader:after{
+  content: "";
+  grid-area: 1/1;
+  background: radial-gradient(circle closest-side, var(--c,#001749) 92%,#0000 ) 0 0/calc(100%/4) 100%;
+  clip-path: inset(0 50% 0 0);
+  animation: l3 1s infinite linear;
+}
+.loader:after{
+  --c: rgb(221, 145, 4); 
+  clip-path: inset(0 0 0 50%);
+}
+@keyframes l3 {
+    100% {background-position: calc(100%/3) 0}
+}
 .center{
   display: flex;
   justify-content: center;
@@ -98,7 +138,7 @@ body {
 
 .headingText {
   font-family: "Max";
-  font-size: clamp(4rem, 10vw, 8rem);
+  font-size: clamp(3.75rem, 12vw, 10rem);
   line-height: clamp(4rem, 10vw, 8rem);
   color: #ffffff;
 }
@@ -267,25 +307,3 @@ body {
 
 
 
-/* HTML: <div class="loader"></div> */
-.loader {
-  display: inline-grid;
-  padding: 5px;
-  background: #fff;
-  filter: blur(4px) contrast(12);
-}
-.loader:before {
-  content: "";
-  height: 40px;
-  aspect-ratio: 3;
-  --c: #ffffff00 64%,#ffffff 66% 98%,#ffffff00 101%;
-  background:
-    radial-gradient(35% 146% at 50% 159%,var(--c)) 0 0,
-    radial-gradient(35% 146% at 50% -59%,var(--c)) 100% 100%;
-  background-size: calc(200%/3) 50%;
-  background-repeat: repeat-x;
-  animation: l11 .8s infinite linear;
-}
-@keyframes l11{
-  to {background-position: -200% 0,-100% 100%}
-}
